high, change two

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">DragonRaise</string>
+    <string name="app_name">Dragon Raise</string>
+    <string name="button_start">Играть</string>
 </resources>
